Remove unused properties.